# VMPilot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  index.html
backend/: CMakeLists.txt
backend/include/bytecode_compiler/: CompilationOrchestrator.hpp  CompilationOutput.hpp  SimpleBackend.hpp
backend/src/bytecode_compiler/: CMakeLists.txt  CompilationOrchestrator.cpp  SimpleBackend.cpp  bytecode_compiler.cpp
backend/tests/: CMakeLists.txt
backend/tools/: CMakeLists.txt
common/: CMakeLists.txt
common/include/: diagnostic.hpp  diagnostic_collector.hpp  macho_parser.hpp  native_registry.hpp  opcode_table.hpp  small_vector.hpp  thread_pool.hpp  utilities.hpp
common/include/cbor/: encode.hpp  schema.hpp  strict.hpp
common/include/core/: ArchEnum.hpp  DataReference.hpp  Section.hpp
common/include/vm/: blob_view.hpp  builder_types.hpp  chaff_expansion.hpp  domain_labels.hpp  encoded_value.hpp  enum_text.hpp  family_policy.hpp  hardware_rng.hpp  secure_zero.hpp  speck64.hpp  vm_blob.hpp  vm_config.hpp  vm_context.hpp  vm_crypto.hpp  vm_encoding.hpp  vm_insn.hpp  vm_opcode.hpp  (+2 more)
common/src/: diagnostic_collector.cpp  file_type_parser.cpp  instruction_t.cpp  macho_parser.cpp  opcode_table.cpp  thread_pool.cpp  utilities.cpp
common/test/: test_cbor_strict.cpp  test_hardware_rng.cpp
data/basic/: CMakeLists.txt
data/data_refs/: CMakeLists.txt  main.cpp  mock_VMPilot.cpp
frontend/: CMakeLists.txt
frontend/tests/: CMakeLists.txt  test_compilation_unit.cpp  test_native_function_base.cpp  test_native_symbol_table.cpp  test_pe_handler.cpp  test_reference_analyzer.cpp  test_region_grouping.cpp  test_section.cpp  test_segment_api.cpp  test_segmentator_integration.cpp  test_strategy.cpp  test_string_extraction.cpp  test_sym_expr.cpp  test_thread_pool.cpp  test_x86_handler.cpp
linker/src/: ARM64StubEmitter.cpp  BinaryEditor.cpp  CMakeLists.txt  MachOEditor.cpp  PEEditor.cpp  X86_64StubEmitter.cpp
loader/src/: ARM64StubEmitter.cpp  BinaryEditor.cpp  BinaryPatcher.cpp  BlobSerializer.cpp  CMakeLists.txt  ELFEditor.cpp  ELFPatcher.cpp  Loader.cpp  MachOEditor.cpp  MachOPatcher.cpp  PEEditor.cpp  PEPatcher.cpp  PayloadBuilder.cpp  StubEmitter.cpp  StubGenerator.cpp  X86_32StubEmitter.cpp  X86_64StubEmitter.cpp
loader/tests/: CMakeLists.txt  temp_file.hpp  test_editor_permissions.cpp  test_extend_text.cpp  test_handover.cpp  test_loader.cpp  test_patch_e2e.cpp  test_phase5_framework.cpp
runtime/: CMakeLists.txt
runtime/bench/: CMakeLists.txt  bench_clock.hpp  bench_main.cpp  bench_output.hpp  bench_stats.hpp  opcode_spec.hpp  program_factory.cpp  program_factory.hpp  runner.hpp
runtime/example/: CMakeLists.txt  arithmetic.cpp  dry_run.cpp  hello_world.cpp  program_builder.hpp  snake.cpp  verify_signature.cpp
runtime/include/: anti_tamper.hpp  blob_builder.hpp  composition_cache.hpp  composition_cache_v2.hpp  decoded_insn.hpp  decoder.hpp  dispatcher.hpp  eh_guard.hpp  encoding.hpp  ephemeral_encoding.hpp  epoch_store.hpp  handler_impls.hpp  handler_traits.hpp  handlers.hpp  native_bridge.hpp  native_registry.hpp  oram.hpp  oram_strategy.hpp  persistent_file.hpp  pipeline.hpp  platform_call.hpp  program_builder.hpp  provider.hpp  tls_helpers.hpp  tokens.hpp  trust_root.hpp  vm_engine.hpp  vm_entry.hpp  vm_intrinsics.hpp  vm_loader.hpp  vm_policy.hpp  vm_runner.hpp  vm_state.hpp  vm_stub_artifact_args.hpp  vm_stub_entry.hpp
runtime/src/: blob_builder.cpp  classify_args.cpp  composition_cache.cpp  decoder.cpp  dispatcher.cpp  eh_guard.cpp  encoding.cpp  ephemeral_encoding.cpp  epoch_store.cpp  handler_detail.cpp  handlers.cpp  native_registry.cpp  oram.cpp  oram_strategies.cpp  pipeline.cpp  platform_call_arm64.S  platform_call_fallback.cpp  platform_call_win64.S  platform_call_win64.asm  platform_call_x86_32.S  platform_call_x86_32.asm  platform_call_x86_64.S  program_builder.cpp  tls_helpers.cpp  tokens.cpp  trust_root_embed.cpp  vm_engine.cpp  vm_entry.cpp  vm_intrinsics.cpp  vm_loader.cpp  vm_runner.cpp  vm_runtime_init.cpp  vm_runtime_init_darwin.cpp  vm_runtime_init_linux.cpp  vm_runtime_init_windows.cpp  vm_state.cpp  vm_stub_entry.cpp
runtime/test/: smoke_test.cpp  test_anti_tamper.cpp  test_blob_builder.hpp  test_blob_loader.cpp  test_call_depth.cpp  test_cfg_patterns.cpp  test_cmp_edge_cases.cpp  test_cross_bb.cpp  test_ctx_ops.cpp  test_decoder.cpp  test_dispatcher.cpp  test_doc16_crypto.cpp  test_doc17_doc19_crypto.cpp  test_encoding.cpp  test_engine_comprehensive.cpp  test_ephemeral_encoding.cpp  test_error_paths.cpp  test_full_prp.cpp  test_handlers.cpp  test_jcc_conditions.cpp  test_load_store.cpp  test_mba_property.cpp  test_native_bridge.cpp  test_native_call_e2e.cpp  test_native_call_variants.cpp  test_native_fp.cpp  test_oram.cpp  test_phase1_foundation.cpp  test_phase2_state.cpp  test_phase3_handlers.cpp  test_phase4_engine.cpp  test_policy_consistency.cpp  test_push_pop_oram.cpp  test_rekey.cpp  test_security_properties.cpp  test_shift_rotate.cpp  test_tls_helpers.cpp  test_vm_entry.cpp  test_vm_runner.cpp  test_vm_stub_entry.cpp  (+1 more)
sdk/src/: CMakeLists.txt
sdk/tests/: CMakeLists.txt  test_arm64_handler.cpp  test_atomic_traits.cpp  test_bytecode_compiler.cpp  test_capstone_wrapper.cpp  test_compilation_orchestrator.cpp  test_compilation_unit.cpp  test_compile_pipeline.cpp  test_compiler_backend.cpp  test_elf_handler.cpp  test_insn_layer.cpp  test_integration_pipeline.cpp  test_macho_handler.cpp  test_memory_model.cpp  test_native_function_base.cpp  test_pattern_layer.cpp  test_pe_handler.cpp  test_phase4e.cpp  test_readonly_section.cpp  test_reference_analyzer.cpp  test_region_grouping.cpp  test_region_refiner.cpp  test_relocation_layer.cpp  test_segment_api.cpp  test_segmentator.cpp  test_segmentator_integration.cpp  test_serializer.cpp  test_strategy.cpp  test_string_extraction.cpp  test_symbolic_resolver.cpp  test_write_classification.cpp  test_x86_handler.cpp
sdk/tools/: CMakeLists.txt  dump_compile.cpp  dump_regions.cpp  verify_roundtrip.cpp
serializer/tests/: CMakeLists.txt  test_serializer.cpp
(+317 files in other folders)
